# panic_capture_poc

./: Cargo.toml
axum_test/: Cargo.toml
axum_test/src/: main.rs
panic_capture_lib/: Cargo.toml
panic_capture_lib/src/: lib.rs
panic_capture_macro/: Cargo.toml
panic_capture_macro/src/: lib.rs
