[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
futures = "0.3.28"
pin-project = "1.1.2"
serde = { version = "1.0.169", features = ["derive"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
panic_capture_lib = { path = "../panic_capture_lib" }
http = "0.2.9"
async-channel = "1.9.0"
backtrace = "0.3.68"
tokio-util = "0.7.8"
